--- a/app/src/main/res/drawable/btnc.xml
+++ b/app/src/main/res/drawable/btnc.xml
@@ -6,7 +6,7 @@
     </item>
     <item android:drawable="@color/colorPrimaryDark"
         android:state_pressed="true">
-
+    // testing
     </item>
     <item android:drawable="@color/colorAccent">
 
