--- a/app/src/main/res/layout/activity_exercise_detail.xml
+++ b/app/src/main/res/layout/activity_exercise_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_exercise_detail"
     android:layout_width="match_parent"
@@ -23,18 +24,69 @@
         android:text="descriptionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="160dp"
+        android:id="@+id/descriptionTextView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="161dp"
-        android:id="@+id/descriptionTextView" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="difficultyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="66dp"
         android:id="@+id/difficultyTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="52dp"
+        android:layout_marginEnd="52dp" />
+
+    <TextView
+        android:text="WarningTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/warningTextView"
+        android:layout_centerVertical="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/workoutImageView"
+        android:layout_below="@+id/nameTextView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="33dp"
+        android:layout_above="@+id/warningTextView"
+        android:layout_toLeftOf="@+id/difficultyTextView"
+        android:layout_toStartOf="@+id/difficultyTextView" />
+
+    <TextView
+        android:text="DirectionTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="77dp"
+        android:id="@+id/directionTextView" />
+
+    <TextView
+        android:text="BodyPartsTextViewTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/equipmentsTextView"
+        android:layout_alignLeft="@+id/equipmentsTextView"
+        android:layout_alignStart="@+id/equipmentsTextView"
+        android:layout_marginTop="68dp"
+        android:id="@+id/bodyPartsTextView" />
+
+    <TextView
+        android:text="EquipmentsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/equipmentsTextView"
+        android:layout_alignTop="@+id/workoutImageView"
+        android:layout_toRightOf="@+id/workoutImageView"
+        android:layout_toEndOf="@+id/workoutImageView" />
 </RelativeLayout>
