--- a/app/src/main/res/layout/activity_exercise_detail.xml
+++ b/app/src/main/res/layout/activity_exercise_detail.xml
@@ -18,7 +18,9 @@
         android:id="@+id/nameTextView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textSize="24sp"
+        android:textColor="@color/colorPrimary" />
 
     <TextView
         android:text="descriptionTextView"
@@ -28,7 +30,8 @@
         android:id="@+id/descriptionTextView"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="@android:color/holo_orange_dark" />
 
     <TextView
         android:text="difficultyTextView"
@@ -69,7 +72,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="77dp"
-        android:id="@+id/directionTextView" />
+        android:id="@+id/directionTextView"
+        android:textColor="@android:color/holo_orange_dark" />
 
     <TextView
         android:text="BodyPartsTextViewTextView"
