--- a/app/src/main/res/layout/activity_exercise_list.xml
+++ b/app/src/main/res/layout/activity_exercise_list.xml
@@ -14,5 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/workout_list"
+        android:dividerHeight="3dp"
+        android:divider="@color/colorPrimary"
         />
 </RelativeLayout>
